Do respect a vehicle's preferred recharge location
This fixes a bug where a vehicle's preferred recharge location would
never be used.

Also add tests to properly cover this case, and have the tests use a
common fixture. Furthermore, make the implementation in
DefaultRechargePositionSupplier more concise.

Approved-by: Leonard Schüngel <leonard.schuengel@iml.fraunhofer.de>
Merged-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>